--- a/add_task.html
+++ b/add_task.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
-    <link rel="stylesheet" href="add_tasks.css">
-    <link rel="stylesheet" href="fonts.css">
+    <title>Join-Add-Task</title>
+
+    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/sidebar.css">
+    <link rel="stylesheet" href="/styles/add_tasks.css">
+    <link rel="stylesheet" href="/styles/fonts.css">
+  
+    <!-- script -->
+    <script src="js/include.js"></script>
 </head>
-<body>
+<body onload="addTaskInit()">
+
+    <div w3-include-html="assets/templates/sidebar.html"></div>
+    <div w3-include-html="assets/templates/header.html"></div>
+
 
     <div class="content_addTask">
         <div class = "textContainer_addTask">
