--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- styles -->
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/sidebar.css">
+
 </head>
-<body>
+<body onload="init()">
     
 </body>
 </html>
