animation join logo

--- a/summary.html
+++ b/summary.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Css link -->
-    <link rel="stylesheet" href="/styles/sidebar.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/fonts.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/fonts.css">
     <!-- main Script -->
-    <script src="/js/include.js"></script>
-   
+    <script src="./js/include.js"></script>
+    <script src="./js/script.js" ></script>
     
 
 </head>
 
 <body onload="summraryInit()" onclick="closeSubmenu()">
-    <div w3-include-html="assets/templates/sidebar.html"></div>
-    <div w3-include-html="assets/templates/header.html"></div>
+    <div w3-include-html="./assets/templates/sidebar.html"></div>
+    <div w3-include-html="./assets/templates/header.html"></div>
     <div class="summaryMain">
 
         <!-- responsive greeting-->
@@ -144,7 +144,7 @@
             </div>
         </div>
     </div>
-    <script src="/js/script.js"></script>
+   
 </body>
 
 </html>
