--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- script -->
+    <script src="./js/script.js"></script>
     <!-- styles -->
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
-<body onload="init()">
-    
+<body onload="initLoading()">
+    <div class="animationJoinLogo">
+        <img class="join-logo" src="/assets/img/join-logo.svg" alt="">
+    </div>
+    <div class="logo">
+        <img class="jlogo" src="/assets/img/join-logo.svg" alt="">
+    </div>
 </body>
 </html>
