--- a/board.html
+++ b/board.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Join-Board</title>
 </head>
 <body>
-    <h1>test</h1>
+
+<div class="tasksToDo" id = "tasks">
+    <div class ="cardA"></div>
+
+</div>
+
 </body>
 </html>
