--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- script -->
     <script src="./js/script.js"></script>
     <!-- styles -->
-    <link rel="stylesheet" href="./styles/style.css">
-
-</head>
-<body onload="initLoading()">
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body onload="initLoading()">
     <div class="animationJoinLogo">
-        <img class="join-logo" src="/assets/img/join-logo.svg" alt="">
+      <img class="join-logo" src="/assets/img/join-logo.svg" alt="" />
     </div>
-    <div class="logo">
-        <img class="jlogo" src="/assets/img/join-logo.svg" alt="">
+    <div class="logo-sign-up-container">
+      <img class="jlogo" src="/assets/img/join-logo.svg" alt="" />
     </div>
- 
-</body>
+    <div class="sign-up-container">
+        <p>Not a Join user?</p>
+        <p class="sign-up-button">Sign up</p>
+      </div>
+  </body>
 </html>
