--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./js/script.js"></script>
     <!-- styles -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/fonts.css" />
   </head>
   <body onload="initLoading()">
     <div class="animationJoinLogo">
@@ -17,8 +18,20 @@
       <img class="jlogo" src="/assets/img/join-logo.svg" alt="" />
     </div>
     <div class="sign-up-container">
-        <p>Not a Join user?</p>
-        <p class="sign-up-button">Sign up</p>
+      <p>Not a Join user?</p>
+      <p class="sign-up-button">Sign up</p>
+    </div>
+    <div id="content-user-validation">
+      <div class="log-in-container">
+        <div class="headline-log-in-container">
+          <h1 class="headline-log-in">Log in</h1>
+          <div class="bottom-line"></div>
+        </div>
+        <form class="input-log-in" action="">
+          <input class="input-field" type="email" id="emailInput" name="email" placeholder="Email" required/>
+          <input class="input-field" type="password" id="passwordInput" name="password" placeholder="Passwort" required/>
+        </form>
       </div>
+    </div>
   </body>
 </html>
