File directory summary adjusted

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
   <body onload="initLoading()">
     <div class="animationJoinLogo">
-      <img class="join-logo" src="/assets/img/join-logo.svg" alt="" />
+      <img class="join-logo" src="./assets/img/join-logo.svg" alt="" />
     </div>
     <div class="logo-sign-up-container">
-      <img class="jlogo" src="/assets/img/join-logo.svg" alt="" />
+      <img class="jlogo" src="./assets/img/join-logo.svg" alt="" />
     </div>
     <div class="sign-up-container">
       <p>Not a Join user?</p>
