--- a/summary.html
+++ b/summary.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Css link -->
-    <link rel="stylesheet" href="/styles/sidebar.css">
-    <link rel="stylesheet" href="styles/summary.css ">
+    <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/summary.css ">
     <!-- main Script -->
-    <script src="/js/include.js"></script>
+    <script src="./js/include.js"></script>
 
 </head>
 
 <body onload="summraryInit()">
-    <div w3-include-html="assets/templates/sidebar.html"></div>
-    <div w3-include-html="assets/templates/header.html"></div>
+    <div w3-include-html="./assets/templates/sidebar.html"></div>
+    <div w3-include-html="./assets/templates/header.html"></div>
     <div class="summaryMain">
         <div class="summaryContainer">
             <div class="summaryLeft">
@@ -31,7 +31,7 @@
                         <!-- Links -->
                         <a href="board.html" class="">
                             <div class="toDoIcon">
-                                <img src="/assets/img/edit.png" alt="">
+                                <img src="./assets/img/edit.png" alt="">
                             </div>
                             <div class="toDoAmount">
                                 <div id="toDos">2</div>
@@ -41,7 +41,7 @@
                         <!--Rechts -->
                         <a href="board.html" class="">
                             <div class="toDoIcon">
-                                <img src="/assets/img/Frame 59.png" alt="">
+                                <img src="./assets/img/Frame 59.png" alt="">
                             </div>
                             <div class="toDoAmount">
                                 <div id="toDos">2</div>
