--- a/summary.html
+++ b/summary.html
@@ -8,8 +8,11 @@
     <!-- Css link -->
     <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/summary.css ">
+    <link rel="stylesheet" href="./styles/header.css">
     <!-- main Script -->
     <script src="./js/include.js"></script>
+    <script src="./js/script.js"></script>
+
 
 </head>
 
