--- a/summary.html
+++ b/summary.html
@@ -13,17 +13,17 @@
     <script src="./js/include.js"></script>
     <script src="./js/script.js"></script>
 
-
+5
 </head>
 
-<body onload="summraryInit()">
+<body onload="summraryInit()" onclick="closeSubmenu()" >
     <div w3-include-html="./assets/templates/sidebar.html"></div>
     <div w3-include-html="./assets/templates/header.html"></div>
     <div class="summaryMain">
         <div class="summaryContainer">
             <div class="summaryLeft">
                 <div class="summaryHeader">
-                    <span><b>Summary</b></span>
+                    <span><h1><b>Summary</b></h1></span>
                     <div class="blueLineText">
                         <div class="blueLine"></div>
                         <div class="summaryKey"><span>key Metrics at Glance</span></div>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="summaryRight"></div>
+            <div class="summaryRight"><div class="greetin"><h2>Guten Abend</h2><p><b>Bekir Labjani</b></p></div></div>
         </div>
     </div>
 </body>
