--- a/summary.html
+++ b/summary.html
@@ -32,39 +32,39 @@
                 <div class="summaryTaskContainer">
                     <div class="summaryTodoDone">
                         <!-- Links -->
-                        <a href="board.html" class="">
+                        <a href="board.html" class="toDoPanel">
                             <div class="toDoIcon">
                                 <img src="./assets/img/edit.png" alt="">
                             </div>
                             <div class="toDoAmount">
                                 <div id="toDos">2</div>
-                                <div>To-do</div>
+                                <div class="toDoText">To-do</div>
                             </div>
                         </a>
                         <!--Rechts -->
-                        <a href="board.html" class="">
+                        <a href="board.html" class="toDoPanel">
                             <div class="toDoIcon">
                                 <img src="./assets/img/Frame 59.png" alt="">
                             </div>
                             <div class="toDoAmount">
                                 <div id="toDos">2</div>
-                                <div>Done</div>
+                                <div class="toDoText">Done</div>
                             </div>
                         </a>
                     </div>
-                    <a href="board.html" class="summaryUrgendDeadLine">
-
+                    <a href="board.html" class="summaryUrgendDeadLine toDoPanelBig">
                     </a>
                     <div class="summaryTasks">
-                        <a href="board.html"></a>
-                        <a href="board.html"></a>
-                        <a href="board.html"></a>
+                        <a class="taskspanels" href="board.html"></a>
+                        <a class="taskspanels" href="board.html"></a>
+                        <a class="taskspanels" href="board.html"></a>
                     </div>
                 </div>
             </div>
             <div class="summaryRight"><div class="greetin"><h2>Guten Abend</h2><p><b>Bekir Labjani</b></p></div></div>
         </div>
     </div>
+    
 </body>
 
 </html>
