--- a/summary.html
+++ b/summary.html
@@ -33,26 +33,36 @@
                     <div class="summaryTodoDone">
                         <!-- Links -->
                         <a href="board.html" class="toDoPanel">
-                            <div class="toDoIcon">
+                            <div class="toDoIcon editHover">
                                 <img src="./assets/img/edit.png" alt="">
                             </div>
                             <div class="toDoAmount">
-                                <div id="toDos">2</div>
-                                <div class="toDoText">To-do</div>
+                                <div id="todosCrowd" class="taskNumber">2</div>
+                                <div class="taskText">To-do</div>
                             </div>
                         </a>
                         <!--Rechts -->
                         <a href="board.html" class="toDoPanel">
-                            <div class="toDoIcon">
+                            <div class="toDoIcon checkhover">
                                 <img src="./assets/img/Frame 59.png" alt="">
                             </div>
                             <div class="toDoAmount">
-                                <div id="toDos">2</div>
-                                <div class="toDoText">Done</div>
+                                <div id="doneCrowd" class="taskNumber">2</div>
+                                <div class="taskText">Done</div>
                             </div>
                         </a>
                     </div>
                     <a href="board.html" class="summaryUrgendDeadLine toDoPanelBig">
+                        <div class="urgend">
+                            <img src="./assets/img/pfeilerrauf.png" alt="">
+                            <div id="urgendCrowd" class="taskNumber">2</div>
+                            <div class="taskText">Urgend</div>
+                        </div>
+                        <div class="partingLine"></div>
+                        <div class="deadline">
+                            <p id="date"><b>October 16, 2022</b></p>
+                            <p class="deadLineText">Upcoming Deadline</p>
+                        </div>
                     </a>
                     <div class="summaryTasks">
                         <a class="taskspanels" href="board.html"></a>
