--- a/summary.html
+++ b/summary.html
@@ -12,8 +12,9 @@
     <!-- main Script -->
     <script src="./js/include.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/summary.js"></script>
 
-    5
+    
 </head>
 
 <body onload="summraryInit()" onclick="closeSubmenu()">
