--- a/add_task.html
+++ b/add_task.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join-Add-Task</title>
     <!-- Css Link -->
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/sidebar.css">
-    <link rel="stylesheet" href="/styles/add_tasks.css">
-    <link rel="stylesheet" href="/styles/fonts.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/add_tasks.css">
+    <link rel="stylesheet" href="./styles/fonts.css">
     
     <!-- script -->
-    <script src="js/include.js"></script>
+    <script src="./js/include.js"></script>
+    <script src="./js/add_tasks.js"></script>
 </head>
 <body onload="addTaskInit()">
 
