file name changed to login page

--- a/loginpage.html
+++ b/loginpage.html
@@ -7,7 +7,7 @@
     <!-- script -->
     <script src="./js/script.js"></script>
     <!-- styles -->
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/loginpage.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
   </head>
   <body onload="initLoading()">
