--- a/board.html
+++ b/board.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join-Board</title>
+    <link rel="stylesheet" href="board.css">
+    <script src="js/add_tasks.js" type="module"></script>
+    <script src="js/board.js" type="module"></script>
 </head>
 <body>
 
@@ -13,4 +16,5 @@
 </div>
 
 </body>
+
 </html>
