--- a/loginpage.html
+++ b/loginpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- script -->
-    <script src="./js/script.js"></script>
+    <script src="./js/loginpage.js"></script>
     <!-- styles -->
     <link rel="stylesheet" href="./styles/loginpage.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
@@ -28,8 +28,14 @@
           <div class="bottom-line"></div>
         </div>
         <form class="input-log-in" action="">
-          <input class="input-field" type="email" id="emailInput" name="email" placeholder="Email" required/>
-          <input class="input-field" type="password" id="passwordInput" name="password" placeholder="Passwort" required/>
+          <div class="input-field-container">
+            <input placeholder="Email" type="email" id="emailInput" name="email" required class="input-field"/>
+            <img class="img-login-email" src="./assets/img/mail_add_contact.png" alt="mail" />
+          </div>
+          <div class="input-field-container">
+          <input class="input-field" placeholder="Passwort" type="password" id="passwordInput" name="password" required />
+          <img class="img-login-email" onclick="myFunction()" src="./assets/img/visibility_off.svg" alt="mail" />
+        </div>
         </form>
       </div>
     </div>
