--- a/board.html
+++ b/board.html
@@ -28,7 +28,7 @@
     <div class="taskAria">
         <section>
             <div class="statusheadline">
-                <span class="fontSize20"><b>To do</b></span>
+                <span class=""><b>To do</b></span>
                 <img onclick="toggleVisibilityAddTask('', 'addTaskPop'), renderAddTaskContent(), statusSelected('toDo'), slide('addTaskPopupPositionFront', 'addTaskPop')"
                     src="img/Property 1=Default.svg" alt="Not found">
             </div>
