log in, guest, data protection button

--- a/add_task.html
+++ b/add_task.html
@@ -12,6 +12,7 @@
     
     <!-- script -->
     <script src="./js/include.js"></script>
+    <script src="./js/header.js"></script>
     <script src="./js/add_tasks.js"></script>
 </head>
 
