--- a/board.html
+++ b/board.html
@@ -10,6 +10,7 @@
 
     
     <script src="./js/board.js"></script>
+    <script src="./js/header.js"></script>
     <script src="./js/include.js"></script>
 
 </head>
