--- a/summary.html
+++ b/summary.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <!-- main Script -->
     <script src="./js/include.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/header.js"></script>
     <script src="./js/summary.js"></script>
 
     
