--- a/loginpage.html
+++ b/loginpage.html
@@ -17,35 +17,12 @@
     <div class="logo-sign-up-container">
       <img class="jlogo" src="./assets/img/join-logo.svg" alt="" />
     </div>
-    <div class="sign-up-container">
+    <div class="sign-up-button-container">
       <p>Not a Join user?</p>
-      <p class="sign-up-log-in-button">Sign up</p>
+      <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
     </div>
-    <div id="content-user-validation">
-      <div class="log-in-container">
-        <div class="headline-log-in-container">
-          <h1 class="headline-log-in">Log in</h1>
-          <div class="bottom-line"></div>
-        </div>
-        <form onsubmit="setLogin()" class="input-log-in" action="">
-          <div class="input-field-container">
-            <input placeholder="Email" type="email" id="emailInput" name="email" required class="input-field" required/>
-            <img class="img-login-email" src="./assets/img/mail_add_contact.png" alt="mail" />
-          </div>
-          <div class="input-field-container">
-          <input oninput="passwordInputLogIn()" class="input-field" placeholder="Password" type="password" id="passwordInput" name="password" required/>
-          <img class="img-login-email" onclick="passwordVisible()" id="passwordImg" src="./assets/img/lock.svg" alt="mail" />
-        </div>
-        <div class="remember-me-container">
-          <img onclick="setRememberMe()" id="rememberMe" class="remember-me-icon" src="./assets/img/propertydefault.svg" alt="propertydefault">
-          <p>Remember me</p>
-        </div>
-        <div class="submit-login-container">
-          <button class="sign-up-log-in-button">Log in</button>
-          <a href="./summary.html" class="guest-log-in-button">Guest Log in</a>
-        </div>
-        </form>
-      </div>
+    <div id="contentUserValidation">
+      
     </div>
     <div class="loginpage-data-protection-container">
       <a class="loginpage-data-protection-link">Privacy Policy</a>
