sign up lower section revised and visibility in confirm input

--- a/loginpage.html
+++ b/loginpage.html
@@ -17,7 +17,7 @@
     <div class="logo-sign-up-container">
       <img class="jlogo" src="./assets/img/join-logo.svg" alt="" />
     </div>
-    <div class="sign-up-button-container">
+    <div id="signUpButtonHeadline" class="sign-up-button-container">
       <p>Not a Join user?</p>
       <p onclick="renderSignUpContent()" class="sign-up-log-in-button">Sign up</p>
     </div>
