--- a/add_task.html
+++ b/add_task.html
@@ -14,6 +14,7 @@
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/add_tasks.js"></script>
+    <script src="./js/saveALoad.js"></script>
 </head>
 
 
