--- a/loginpage.html
+++ b/loginpage.html
@@ -6,12 +6,13 @@
     <title>Document</title>
     <!-- script -->
     <script src="./js/loginpage.js"></script>
+    <script src="./js/register.js"></script>
     <!-- styles -->
     <link rel="stylesheet" href="./styles/loginpage.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
   </head>
   <body onload="initLoading()">
-
+    <div id="registerSuccessfullyContent"></div>
     <div class="animationJoinLogo">
       <img class="join-logo" src="./assets/img/join-logo.svg" alt="" />
     </div>
