--- a/add_task.html
+++ b/add_task.html
@@ -14,14 +14,13 @@
     <script src="./js/include.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/add_tasks.js"></script>
-    <script src="./js/saveALoad.js"></script>
+   
 </head>
-
 
 <body onload="addTaskInit(); render()">
 
 
-
+<img class="deleteAndEdit_vector" src="./assets/img/Vector 3.png" alt="">
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <div w3-include-html="assets/templates/header.html"></div>
 
