--- a/add_task.html
+++ b/add_task.html
@@ -20,7 +20,7 @@
 <body onload="addTaskInit(); render()">
 
 
-<img class="deleteAndEdit_vector" src="./assets/img/Vector 3.png" alt="">
+
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <div w3-include-html="assets/templates/header.html"></div>
 
@@ -172,7 +172,7 @@
                 </div>         
                                      
                     <div class="categoryFrame74" id="taskCategory" onclick="hide()">
-                        <p>Select a task category</p>
+                        <p id ="categorySelect" Value="Select a task category">Select a task category</p>
 
                         <div class ="imgArrows" id="imgArrows" onclick="hide()">
                             <img class="arrow_drop_down" src="./assets/img/arrow_drop_down.png"  id="arrow" onclick="hide()" > 
