--- a/contacts.html
+++ b/contacts.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="formDiv">
                         <form id="addContactForm">
-                            <img src="./Close.png" onclick="closeAddContact()">
+                            <img src="./assets/img/Close.png" onclick="closeAddContact()">
                             <div class="input">
                                 <input class="inputField" type="text" placeholder="Name" id="userName">
                                 <input class="inputField" type="email" placeholder="Email" id="userEmail">
@@ -49,7 +49,7 @@
     <div class="editContactPopup d-none" id="editContact">
         <div class="editContactMain">
             <div class="editContactLeft">
-                <img src="./logo-white.svg">
+                <img src="./assets/img/edit_contacts.png">
                 <div class="editContactHeadline">Edit contact</div>
                 <div class="line2"></div>
             </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="formDiv">
                         <form id="editContactForm">
-                            <img src="./Close.png" onclick="closeEditContact()">
+                            <img src="./assets/img/Close.png" onclick="closeEditContact()">
                             <div class="input" id="editInput"></div>
 
 
@@ -76,7 +76,7 @@
             <button class="add-contact" onclick="addNewContact()">
                 <div class="add-contact-main">
                     <div>Add new contact</div>
-                    <div><img class="add-contact-image" src="./person_add.png"></div>
+                    <div><img class="add-contact-image" src="./assets/img/person_add.png"></div>
                 </div>
             </button>
             <div class="contacts" id="contacts"></div>
