--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
     <div class="addContactPopup d-none" id="addContact">
         <div class="addContactMain">
             <div class="addContactLeft">
-                <img src="./logo-white.svg">
+                <img src="./assets/img/logo-white.svg">
                 <div class="addContactHeadline">Add contact</div>
                 <div class="addContactHeadline2">Tasks are better with a team!</div>
                 <div class="line2"></div>
@@ -49,23 +49,19 @@
     <div class="editContactPopup d-none" id="editContact">
         <div class="editContactMain">
             <div class="editContactLeft">
-                <img src="./assets/img/edit_contacts.png">
+                <img src="./assets/img/logo-white.svg">
                 <div class="editContactHeadline">Edit contact</div>
                 <div class="line2"></div>
             </div>
+            <div class="editContactMiddle">
+                <div class="editCircle"></div>
+            </div>
             <div class="editContactRight">
-                <div class="editContactRight2">
-                    <div class="editContactRight3">
-                        <img src="#">
-                    </div>
-                    <div class="formDiv">
-                        <form id="editContactForm">
-                            <img src="./assets/img/Close.png" onclick="closeEditContact()">
-                            <div class="input" id="editInput"></div>
-
-
-                        </form>
-                    </div>
+                <div class="formDiv">
+                    <form id="editContactForm">
+                        <img src="./assets/img/Close.png" onclick="closeEditContact()">
+                        <div class="input" id="editInput"></div>
+                    </form>
                 </div>
             </div>
         </div>
