update edit contacts

--- a/contacts.html
+++ b/contacts.html
@@ -60,7 +60,7 @@
             <div class="editContactRight">
                 <div class="formDiv">
                     <form id="editContactForm">
-                        <img src="./assets/img/Close.png" onclick="closeEditContact()">
+                        <div class="close-img-div"><img class="close-img" src="./assets/img/Close.png" onclick="closeEditContact()"></div>
                         <div class="input" id="editInput"></div>
                     </form>
                 </div>
