--- a/loginpage.html
+++ b/loginpage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- script -->
+    <script src="./js/header.js"></script>
     <script src="./js/loginpage.js"></script>
     <script src="./js/register.js"></script>
     <!-- styles -->
