--- a/add_task.html
+++ b/add_task.html
@@ -15,6 +15,7 @@
     <script src="./js/header.js"></script>
     <script src="./js/add_tasks.js"></script>
     <script src="./js/register.js"></script>
+    <script src="./js/contacts.js"></script>
    
 </head>
 
