--- a/add_task.html
+++ b/add_task.html
@@ -85,8 +85,8 @@
 
                 
                 <div class="list"  class="hide">
-                    <ul id="listContact" class="hide underList"> 
-                        <li id ="contactList" class="options optionsMarginTop" onclick="selectAssigned(this)" >
+                    <ul id="listContact" class="hide underListContact"> 
+                        <li id ="contactList" class="liContact optionsMarginTop" onclick="selectAssigned(this)" >
                             <!-- <p onclick="hideAssigned(event)">Technical Task</p> -->
                         </li>                       
                     </ul>
