--- a/add_task.html
+++ b/add_task.html
@@ -86,7 +86,7 @@
                 
                 <div class="list"  class="hide">
                     <ul id="listContact" class="hide underListContact"> 
-                        <li id ="contactList" class="liContact optionsMarginTop" onclick="selectAssigned(this)" >
+                        <li id ="contactList" class="liContact optionsMarginTop">
                         </li>                       
                     </ul>
                 </div>                                                                       
