--- a/add_task.html
+++ b/add_task.html
@@ -17,6 +17,7 @@
     <script src="./js/register.js"></script>
     <script src="./js/contacts.js"></script>
    
+   
 </head>
 
 <body onload="addTaskInit(); render()">
@@ -295,7 +296,7 @@
 
     <div class="inhalt" id="inhalt"></div>    
 
-    <div>Test Commit</div>
+    <script src="./js/removeKeyValues.js"></script>
 </body>
 </html>
 
